[package]
name = "fitbit-rs"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust client for the Fitbit API"
repository = "https://github.com/yourusername/fitbit-rs"
license = "MIT OR Apache-2.0"
keywords = ["fitbit", "api", "health", "fitness", "tracking"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.97"
thiserror = "2.0.12"
ureq = { version = "3.0.10", features = ["json"] }
dirs = "6.0.0"
rust-ini = "0.21.1"

[dev-dependencies]
mockall = "0.13.1"
tempfile = "3.10.1"
mockito = "1.4.0"

[features]
default = []
# Enable OAuth2 authentication flow
oauth2 = []
# Enable filesystem caching of responses
filesystem-cache = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]